add api create/get all major of nurse
