# module/major/usecase/commands/dto.cmd.go
@@ -1,0 +1,5 @@
+package majorcommands
+
+type CreateMajorCmdDTO struct {
+	Name string `json:"name"`
+}
